--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</header>
 		
 			
-				<h1>All About Coffee</h1>
+				<h1>Hola mundo</h1>
 			<figure>
 			<img class="taza" src="./images/coffee-cup.png" title="coffee-cup" alt="coffee-cup"/>
 			</figure>
